<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="mr_media_route_button_content_description">Media output</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="icon_font_netflix_logo"></string>
    <string name="icon_font_netflix_n_icon"></string>
    <string name="icon_font_play_w_ring"></string>
    <string name="icon_font_skip_back_30"></string>
    <string name="icon_font_audio_subtitle"></string>
    <string name="icon_font_episodes"></string>
    <string name="settings_key_open_source_licenses">settings_key_open_source_licenses</string>
    <string name="label_exit_kids">Exit Kids</string>
    <string name="label_switch_to_kids">Switch to Kids</string>
    <string name="label_more">More</string>
    <string name="label_about">About</string>
    <string name="label_version">Version</string>
    <string name="label_site">Site</string>
    <string name="label_bugreport">Bug Report</string>
    <string name="label_playerType">Player Type</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_reset_uibootloader">Reset bootloader URL</string>
    <string name="label_pref_settings_category_playback">Video Playback</string>
    <string name="label_pref_settings_wifi_warning_title">Wi-Fi Only</string>
    <string name="label_pref_settings_category_qa">QA</string>
    <string name="label_site_summary">Click here to change link to UI.</string>
    <string name="label_reset_uibootloader_summary">Click here to reset bootloader URL to default</string>
    <string name="label_bugreport_summary">Click here to save logcat to file.</string>
    <string name="label_playeroverlay_enable">Enable player debug data</string>
    <string name="label_playeroverlay_summary">If you want to see playback metadata during playback.</string>
    <string name="label_playerType_summary">You can select any supported player type.</string>
    <string name="label_bootParams">Bootloader parameters</string>
    <string name="label_bootParams_summary">Add parameters to bootloader URL as they are entered. Entry will NOT be URL encoded!</string>
    <string name="accesibility_btnPlayPause">Play/Pause</string>
    <string name="accesibility_btnSkipBack">Back 30 seconds</string>
    <string name="accesibility_btnLanguage">Change subtitle and/or audio source language</string>
    <string name="accesibility_btnSharing">Sharing</string>
    <string name="label_pref_settings_category_notification">Notifications</string>
    <string name="label_pref_settings_notification_enable">Accept push notifications</string>
    <string name="label_pref_settings_notification_enable_summary">Notifications may include newly-added movies, TV shows, personalized suggestions or other notices</string>
    <string name="label_pref_settings_category_legal">Legal</string>
    <string name="label_pref_settings_privacy_policy">Privacy Policy</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_forgot_your_password">Forgot Your Password?</string>
    <string name="label_open_source_licenses">Open Source Licenses</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_progress_signing_in">Signing In</string>
    <string name="accesibility_btnStop">Stop</string>
    <string name="accesibility_btnEpisodes">Change episode</string>
    <string name="accesibility_btnRating">Rate this title</string>
    <string name="accesibility_btnVolume">Change Volume</string>
    <string name="label_socialOptIn_title">Would you like to receive notifications from Netflix?</string>
    <string name="label_socialOptIn_message">Notifications may include newly-added movies, TV shows, personalized suggestions or other notices and can be turned on or off at any time.</string>
    <string name="label_socialOptIn_negative_button">No Thanks</string>
    <string name="label_socialOptIn_positive_button">OK</string>
    <string name="label_subtitleConfiguration">Subtitle Configuration</string>
    <string name="label_subtitleConfiguration_summary">You can select any subtitle configuration.</string>
    <string name="label_spotlight">Spotlight</string>
    <string name="label_play_now">Play Now</string>
    <string name="label_more_info">More Info</string>
    <string name="label_pref_settings_legal_terms_of_use">Terms of Use</string>
    <string name="label_castappid_title">Cast ApplicationId</string>
    <string name="label_castappid_summary">Restart application for the change to take effect. Current ApplicationId:</string>
    <string name="label_postplay_playNextEpisode">Play next episode</string>
    <string name="label_postplay_continueWatching">Continue watching</string>
    <string name="label_postplay_playFromBeginning">Play from beginning</string>
    <string name="label_postplay_stopWatching">Stop watching</string>
    <string name="label_postplay_browse">Episodes</string>
    <string name="label_pin_hint">----</string>
    <string name="label_pin_message">Enter PIN to watch restricted content.</string>
    <string name="label_pin_forgot"><a href="http://www.netflix.com/PIN">Forgot PIN?</a></string>
    <string name="label_pin_error">Incorrect PIN. Please try again.</string>
</resources>