<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/mdx_mini_player_aux_controls" android:layout_width="fill_parent" android:layout_height="@dimen/mdx_mini_player_controls_group_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/mdx_mini_player_language_btn_expanded" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_audio_sub" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnLanguage" style="@style/MdxMiniPlayerActionButton" />
    <ImageView android:id="@id/mdx_mini_player_volume_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/p4t_volume" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnVolume" style="@style/MdxMiniPlayerActionButton" />
    <ImageView android:id="@id/mdx_mini_player_share_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_share" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnSharing" style="@style/MdxMiniPlayerActionButton" />
    <ImageView android:id="@id/mdx_mini_player_rating_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_star" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnRating" style="@style/MdxMiniPlayerActionButton" />
    <ImageView android:id="@id/mdx_mini_player_episodes_btn_expanded" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_episodes" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnEpisodes" style="@style/MdxMiniPlayerActionButton" />
</LinearLayout>