<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/dialog_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="left|center" android:paddingLeft="@dimen/optin_dialog_pad" android:paddingTop="@dimen/optin_dialog_pad" android:paddingRight="@dimen/optin_dialog_pad" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_socialOptIn_title" android:singleLine="false" style="@style/OptInTitle" />
    <TextView android:gravity="left|center" android:paddingLeft="@dimen/optin_dialog_pad" android:paddingTop="@dimen/optin_dialog_pad" android:paddingRight="@dimen/optin_dialog_pad" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_socialOptIn_message" android:singleLine="false" style="@style/OptInMessage" />
    <View android:background="@drawable/list_div" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/NetflixButtonBar">
        <Button android:id="@id/negativeBtn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/label_socialOptIn_negative_button" android:layout_weight="0.5" style="@style/NetflixDialogButton" />
        <View android:background="@drawable/vertical_list_div" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/positiveBtn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/label_socialOptIn_positive_button" android:layout_weight="0.5" style="@style/NetflixDialogButton" />
    </LinearLayout>
</LinearLayout>