<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:id="@id/interrupter" android:background="#cc000000" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <Button android:gravity="left|center" android:id="@id/postplay_continueWatching" android:layout_width="fill_parent" android:layout_marginBottom="@dimen/postplay_play_button_pad_bottom" android:text="@string/label_postplay_continueWatching" android:drawableLeft="@drawable/p4p_play" android:contentDescription="@string/label_postplay_continueWatching" style="@style/PostPlayPlayButton" />
        <Button android:gravity="left|center" android:id="@id/postplay_playFromBeginning" android:layout_width="fill_parent" android:layout_marginBottom="@dimen/postplay_play_button_pad_bottom" android:text="@string/label_postplay_playFromBeginning" android:drawableLeft="@drawable/p4p_back" android:contentDescription="@string/label_postplay_playFromBeginning" style="@style/PostPlayGreyButton" />
        <Button android:gravity="left|center" android:id="@id/postplay_stopWatching" android:layout_width="fill_parent" android:text="@string/label_postplay_stopWatching" android:drawableLeft="@drawable/p4p_stop" android:contentDescription="@string/label_postplay_stopWatching" style="@style/PostPlayGreyButton" />
    </LinearLayout>
</RelativeLayout>