<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/postplay_play_button" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/postplay_episodes_phones_overlay_black_height" android:layout_marginRight="@dimen/postplay_episodes_margin" android:layout_marginBottom="@dimen/postplay_episodes_margin" android:text="@string/label_postplay_playNextEpisode" android:drawableLeft="@drawable/p4p_play" android:contentDescription="@string/label_postplay_playNextEpisode" style="@style/PostPlayPlayButton" />
    <Button android:id="@id/postplay_stop_button" android:visibility="gone" android:layout_width="@dimen/postplay_episodes_phones_overlay_black_width" android:layout_height="@dimen/postplay_episodes_phones_overlay_black_height" android:layout_marginRight="@dimen/postplay_episodes_margin" android:layout_marginBottom="@dimen/postplay_episodes_first_line_bottom_margin" android:text="@string/label_postplay_stopWatching" android:layout_toRightOf="@id/postplay_play_button" android:layout_below="@id/postplay_play_button" android:layout_alignLeft="@id/postplay_play_button" android:contentDescription="@string/label_postplay_stopWatching" style="@style/PostPlayBlackButton" />
    <Button android:id="@id/postplay_browse_button" android:visibility="gone" android:layout_width="@dimen/postplay_episodes_phones_overlay_black_width" android:layout_height="@dimen/postplay_episodes_phones_overlay_black_height" android:layout_marginTop="@dimen/postplay_episodes_first_line_bottom_margin" android:text="@string/label_postplay_browse" android:layout_toRightOf="@id/postplay_stop_button" android:layout_alignRight="@id/postplay_play_button" android:layout_alignBottom="@id/postplay_stop_button" android:contentDescription="@string/label_postplay_stopWatching" style="@style/PostPlayBlackButton" />
</RelativeLayout>