<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/mdx_controller_bg" android:layout_width="fill_parent" android:layout_height="64.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/mdx_controller_boxart" android:layout_width="46.0dip" android:layout_height="64.0dip" android:layout_marginLeft="9.0dip" android:layout_marginRight="9.0dip" android:src="@drawable/netflix_android_notification_icon" />
    <TextView android:ellipsize="end" android:layout_gravity="left|center" android:id="@id/mdx_controller_title" android:paddingLeft="10.0dip" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:scrollHorizontally="false" android:singleLine="true" android:layout_weight="1.0" style="@style/MdxNotificationLabelTitle" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/mdx_controller_skip_back" android:background="@null" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/notif_back30" android:contentDescription="@string/accesibility_btnSkipBack" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/mdx_controller_play_pause" android:background="@null" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/notif_pause" android:contentDescription="@string/accesibility_btnPlayPause" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/mdx_controller_stop" android:background="@null" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/notif_stop" android:contentDescription="@string/accesibility_btnStop" />
    </LinearLayout>
</LinearLayout>